# dot-vault

./: .gitignore  Cargo.toml  README.md
Doc/: Internals.md  Setup  Setup & testing.md  Setup&testing.md  Setup.md
evm-contracts/collateral-proxy/: contract.sol
lib/xvm-environment/: Cargo.toml
wasm-contracts/collateral/: Cargo.toml  build-all.sh  lib.rs
wasm-contracts/collateral/oracle/: Cargo.toml  lib.rs
wasm-contracts/collateral/sign-transfer/: Cargo.toml  lib.rs
wasm-contracts/oracle/: .gitignore  Cargo.toml  curry-contract.ts  index.ts  lib.rs  package.json  tsconfig.json
wasm-contracts/psp34-controller/: Cargo.toml  lib.rs
wasm-contracts/signtransfer/: Cargo.toml  lib.rs
wasm-lib/assets/: lib.rs
wasm-lib/xvm-builder/: lib.rs
wasm-lib/xvm-environment/: lib.rs
wasm-lib/xvm-helper/: Cargo.toml
