[package]
name = "collateral"
version = "0.1.0"
authors = ["okAlice"]
edition = "2021"

[dependencies]
ink_primitives = { version = "3.4.0", default-features = false }
ink_metadata = { version = "3.4.0", default-features = false, features = ["derive"], optional = true }
ink_env = { version = "3.4.0", default-features = false }
ink_storage = { version = "3.4.0", default-features = false }
ink_lang = { version = "3.4.0", default-features = false }
ink_prelude = { version = "3.4.0", default-features = false }
ethabi = { git = "https://github.com/akru/ethabi", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }

xvm-helper = { path = "../../wasm-lib/xvm-helper", default-features = false }
sign-transfer = { path = "sign-transfer", default-features = false, features = ["ink-as-dependency"] }
oracle = { path = "oracle", default-features = false, features = ["ink-as-dependency"] }

assets_extension = { path = "../../wasm-lib/assets", default-features = false }

openbrush = { git = "https://github.com/PierreOssun/openbrush-contracts", default-features = false, features = ["ownable"] }

rand_chacha = { version = "0.3.1", default-features = false }
hex = { version = "0.4.3", default-features = false }

[lib]
name = "collateral"
path = "lib.rs"
crate-type = [
    # Used for normal contract Wasm blobs.
    "cdylib",
    # Used for ABI generation.
    "rlib",
]

[features]
default = ["std"]
std = ["ink_primitives/std", "ink_metadata", "ink_metadata/std", "ink_env/std", "ink_storage/std", "ink_lang/std", "ink_prelude/std", "scale/std", "scale-info/std", "openbrush/std", "xvm-helper/std", "sign-transfer/std", "oracle/std"]
ink-as-dependency = []

[workspace]
member = [
    "sign-transfer",
    "oracle"
]

